python-defaults (2.6.6-6) UNRELEASED; urgency=low

  * Make the error message about missing extension more clear
    (and more verbose in --verbose mode)

 -- Piotr Ożarowski <piotr@debian.org>  Sat, 06 Nov 2010 00:19:39 +0100

python-defaults (2.6.6-5) experimental; urgency=low

  * pycompile: if installed Python is requested via -V option, use it even if
    it's not in a list of supported Python versions (closes: 600529)

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 17 Oct 2010 23:22:22 +0200

python-defaults (2.6.6-4) experimental; urgency=low

  * Add python2.7 as a supported Python version.
  * python-all{,-dev,-dbg}: Depend on the 2.7 packages.
  * Run the rtinstall script, when 2.7 became a supported version (2.6.6-4)
    and python2.7 is installed.

 -- Matthias Klose <doko@debian.org>  Sat, 16 Oct 2010 11:58:31 +0200

python-defaults (2.6.6-3) unstable; urgency=low

  * Upload to unstable
  * dh_python2: egg renaming fixed

 -- Piotr Ożarowski <piotr@debian.org>  Wed, 22 Sep 2010 23:03:15 +0200

python-defaults (2.6.6-2) experimental; urgency=low

  [ Piotr Ożarowski ]
  * Add README.derivatives (source package)
  * dh_python2:
    - add dist_fallback file with a list of Python distribution name and
      Debian package name pairs (to be used as a fall back source for
      PyDist feature)
    - if dist_fallback and `dpkg -S` fails to find the right package name,
      fall back to package name recommended by Debian Python Policy (use
      debian/pydist-overrides file to override)
    - disable PyDist feature if dh_pydeb is in debian/rules
  * Use versioned interpreter name rather than "python" only in
    python-minimal.postinst (closes: 595826)

  [ Matthias Klose ]
  * python.mk (py_libdir): Return /usr/lib/python3/dist-packages for 3.x
    versions.
  * python.mk (py_pkgname): New macro to refer the package name depending
    on the python version.

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 12 Sep 2010 18:41:04 +0200
