@@ -2,8 +2,11 @@ python-defaults (2.6.6-6) UNRELEASED; urgency=low
 
   * Make the error message about missing extension more clear
     (and more verbose in --verbose mode)
+  * dh_python2: install files listed in debian/package.pyinstall file
+    as public modules for all requested Python versions (use dh_install's
+    package.install files for private modules)
 
- -- Piotr Ożarowski <piotr@debian.org>  Sat, 06 Nov 2010 00:19:39 +0100
+ -- Piotr Ożarowski <piotr@debian.org>  Sun, 21 Nov 2010 23:49:32 +0100
 
 python-defaults (2.6.6-5) experimental; urgency=low
 
